# slate

./: Cargo.toml  README.md  install.sh
src/: app.js  app.rs  events.rs  filetree.rs  highlight.rs  main.rs  search.rs  tabs.rs  ui.rs
