[package]
name = "slate"
version = "0.1.0"
edition = "2021"
description = "A TUI markdown note editor — Obsidian replacement"

[[bin]]
name = "slate"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
walkdir = "2"
open = "5"
anyhow = "1"
ratatui-code-editor = "0.0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
